# AI_AzureFunction_Langgraph

./: .gitignore  README.md  function_app.py  main.py  pyproject.toml  requirements.txt
data/: __init__.py  context.py  mock_data.py
functions/: __init__.py  blueprint.py  functions_task.py
graph/: __init__.py  sample_graph.py
nodes/: __init__.py  clean_context.py  fetch_message.py  final_response.py  invalid_id.py  raise_support.py  summarise.py  validate.py
utils/: __init__.py  models.py
